# rmms-ai-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
rmms_ai_server/: __init__.py  __main__.py  app.py  cli.py  config.py
rmms_ai_server/analysis/: __init__.py  autosong.py  note_detection.py  peak_detection.py  stft.py
rmms_ai_server/api/: routes_capabilities.py  routes_events.py  routes_files.py  routes_health.py  routes_tasks.py  routes_test_page.py
rmms_ai_server/core/: __init__.py  auth.py  cache_manager.py  pipeline_defs.py  pipeline_runner.py  sse_manager.py  task_manager.py
rmms_ai_server/engine/: __init__.py  cpu_backend.py  cuda_backend.py  detect_engine.py  device_backend.py  dml_backend.py  generate_engine.py  midi_engine.py  mps_backend.py  npu_backend.py  split_engine.py  xpu_backend.py
rmms_ai_server/models/: __init__.py  errors.py  protocol.py  requests.py
rmms_ai_server/services/: mdns.py
rmms_ai_server/static/: test.html
